--- a/css/main.css
+++ b/css/main.css
@@ -95,6 +95,51 @@ nav img{
   height: 3em;
 }
 /* ==========================================================================
+   SLIDE CUSTOM
+   ========================================================================== */
+   body {
+    font-family: "arial", sans-serif;
+    text-align: center;
+}
+
+#slider {
+    position: relative;
+    width: 100%;
+    margin: auto;
+}
+
+#slider > img {
+    height: 600px;
+    width:95%;
+}
+
+#precedent, #suivant {
+    cursor: pointer;
+    transition: opacity 0.3s ease;
+    opacity: 0;
+    position: absolute;
+    top: 300px;
+    font-size: 100px;
+    color: rgba(220, 220, 220, 0.8);
+    background-color: rgba(0, 123, 255, 0.3);
+    padding: 10px;
+}
+
+#precedent {
+    left: 0;
+}
+
+#suivant {
+    right: 0;
+}
+
+#slider:hover #precedent, #slider:hover #suivant {
+    opacity: 1;
+}
+
+
+
+/* ==========================================================================
    Helper classes
    ========================================================================== */
 
